<resources>
    <string name="app_name">HelpMe</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="nav_item_contacts">Contacts</string>
    <string name="nav_item_police_no">Police Stations</string>
    <string name="nav_item_nearby">Safe Places</string>
    <string name="nav_item_tips">Useful Tips</string>
    <string name="nav_sub_menu">More</string>
    <string name="nav_sub_menu_item_developer">About</string>
    <string name="nav_sub_menu_item_libraries">Open Source</string>
    <string name="input_title">Emergency Contact</string>
    <string name="input_content">Please enter 10 digit mobile number</string>
    <string name="input_agree">OK</string>
    <string name="input_disagree">Cancel</string>
    <string name="title_activity_maps">Map</string>
</resources>
