<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_menu_contacts"
            android:title="@string/nav_item_contacts" />
        <item
            android:id="@+id/nav_police"
            android:icon="@drawable/ic_menu_police"
            android:title="@string/nav_item_police_no" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_menu_nearby"
            android:title="@string/nav_item_nearby" />
        <item
            android:id="@+id/nav_tips"
            android:icon="@drawable/ic_menu_tips"
            android:title="@string/nav_item_tips" />
    </group>

    <item android:title="@string/nav_sub_menu">
        <menu>
            <item
                android:id="@+id/nav_developer"
                android:icon="@drawable/ic_menu_developer"
                android:title="@string/nav_sub_menu_item_developer" />
            <item
                android:id="@+id/nav_open_source"
                android:icon="@drawable/ic_menu_libraries"
                android:title="@string/nav_sub_menu_item_libraries" />
        </menu>
    </item>

</menu>
